# schema-extract-deke

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-19-001-feat-session-2-validation-retry-plan.md
docs/solutions/build-errors/: python-project-bootstrap.md
docs/solutions/logic-errors/: response-cleaning-validation-retry-confidence.md
samples/job_postings/: sample_01.txt
schemas/: job_posting.json
src/schema_extract/: __init__.py  pipeline.py
src/schema_extract/extraction/: __init__.py  cleaner.py  client.py  prompt.py  validator.py
src/schema_extract/models/: __init__.py  results.py  schemas.py
tests/: test_cleaner.py  test_validator.py
